# DVil

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  justfile
.github/workflows/: cargo.yml
assets/: main.css
config/: editor.ncl  init.json  init.ncl  schema.ncl
config/color/: onedark.ncl
src/: app.rs  main.rs  var.rs
src/editor/: caret.rs  config.rs  editor.rs  file.rs  mod.rs  mode.rs  motion.rs  theme.rs
src/layout/: float.rs  mod.rs  statusline.rs
src/ui/: bar.rs  cursor.rs  editor.rs  float.rs  home.rs  mod.rs  welcome.rs
src/ui/editor/: editor.rs  glyph.rs  line.rs  mod.rs
